<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar">
        </include>

    <ScrollView
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:layout_marginTop="10dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:passwordToggleContentDescription="Show"
                        app:passwordToggleDrawable="@drawable/show_password"
                        app:passwordToggleTint="@color/colorPrimary"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/simpleCheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/checkBox"/>
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/signupButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        app:iconGravity="textStart"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:text="@string/signUp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:cornerRadius="20dp"
                        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/eventSpinnerLayout" />

                    <TextView
                        android:id="@+id/forgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ForgotYourPassword"
                        android:textColor="@color/colorPrimary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:layout_marginTop="10dp"
                        android:textAllCaps="true"
                        android:layout_gravity="center">
                    </TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:weightSum="3">

                <View
                    android:layout_height="2dp"
                    android:layout_width="0dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginStart="40dp"
                    android:layout_weight="1.25"
                    android:layout_gravity="center">
                </View>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/or"
                    android:textColor="@color/colorPrimary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textAllCaps="true"
                    android:gravity="center">
                </TextView>


                <View
                    android:layout_height="2dp"
                    android:layout_width="0dp"
                    android:layout_marginEnd="40dp"
                    android:background="@color/colorPrimary"
                    android:layout_weight="1.25"
                    android:layout_gravity="center">
                </View>

            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:backgroundTint="@color/white"
                android:elevation="1dp"
                android:text="@string/google"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                app:cornerRadius="20dp"
                app:iconGravity="textStart"
                app:iconTint="@android:color/transparent"
                app:iconTintMode="screen"
                app:icon="@drawable/google"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginLinkedin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="@color/white"
                android:elevation="1dp"
                android:text="@string/linkedin"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                app:cornerRadius="20dp"
                app:iconGravity="textStart"
                app:iconTint="@android:color/transparent"
                app:iconTintMode="screen"
                app:icon="@drawable/rsz" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>