<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/MaterialCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardElevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="1dp"
        app:strokeColor="@color/colorAccent">


        <LinearLayout
            android:id="@+id/batteryLinearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="6dp"
            android:weightSum="2"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3">

                <TextView
                    android:id="@+id/textview3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gray"
                    android:text=""
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.7"
                android:orientation="vertical"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/textview1"
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/header"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large">

                    </TextView>

                    <TextView
                        android:id="@+id/textview4"
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:gravity="end"
                        android:textColor="@color/black"
                        android:text="@string/ago"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small">

                    </TextView>

                </LinearLayout>


                <TextView
                    android:id="@+id/textview2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/black"
                    android:text="@string/post"
                    android:gravity="start">

                </TextView>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>