<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.ProfileFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_profile"
        app:layout_constraintTop_toTopOf="parent">
    </include>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline2">
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/guideline5">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/img_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/photo"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="2dp" />
        </RelativeLayout>



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/victoriaRobertson"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/topLayout"
        app:layout_constraintBottom_toTopOf="@+id/status">
    </TextView>

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/status"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/name">
    </TextView>


    <LinearLayout
        android:id="@+id/BtnLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:weightSum="2"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPosts"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                app:strokeColor="@color/white"
                android:layout_weight="1"
                android:translationZ="1in"
                android:text="@string/posts"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guidelineButton2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPhotos"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:backgroundTint="@color/lightGray"
                android:text="@string/photos"
                android:translationZ="0in"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/gray"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guidelineButton1"
                app:layout_constraintBottom_toBottomOf="parent" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineButton1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.45"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineButton2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.55"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <!--    <info.hoang8f.android.segmented.SegmentedGroup-->
<!--        xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"-->
<!--        android:id="@+id/segmented2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="10dp"-->
<!--        android:orientation="horizontal"-->
<!--        segmentedgroup:sc_border_width="2dp"-->
<!--        segmentedgroup:sc_corner_radius="10dp"-->
<!--        android:weightSum="2"-->
<!--        segmentedgroup:layout_constraintStart_toStartOf="parent"-->
<!--        segmentedgroup:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/status">-->

<!--        <RadioButton-->
<!--            android:id="@+id/button21"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Posts"-->
<!--            style="@style/RadioButton" />-->

<!--        <RadioButton-->
<!--            android:id="@+id/button22"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Photos"-->
<!--            style="@style/RadioButton" />-->
<!--    </info.hoang8f.android.segmented.SegmentedGroup>-->

    <RelativeLayout
        android:id="@+id/layoutPhotos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/BtnLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            app:tabBackground="@drawable/indicator_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp" />
    </RelativeLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/postRecyclerView"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:padding="5dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/BtnLayout"
                app:layout_constraintBottom_toBottomOf="parent">
            </androidx.recyclerview.widget.RecyclerView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>

</androidx.constraintlayout.widget.ConstraintLayout>